# spielplatz

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
hpi-backend/: Cargo.toml
hpi-backend/src/: lib.rs  lint.rs  run.rs
public/assets/: theme.css
src/: App.svelte  Editor.svelte  _mixins.scss  global.scss  hpi.ts  hpi.worker.ts  main.ts  oneDark.js  print.ts
src/scripts/: approx_apery.hpi  approx_e.hpi  approx_pi.hpi  fib.hpi  pow.hpi  primfaktoren.hpi  willkommen.hpi
src/theme/: _smui-theme.scss
