[package]
name = "hpi-backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
wasm-bindgen = "0.2"

hpi-analyzer = { path = "/home/mik/Coding/hpi/hpi-sprache/crates/hpi-analyzer/" }
hpi-interpreter-tree = { path = "/home/mik/Coding/hpi/hpi-sprache/crates/hpi-interpreter-tree/" }
hpi-parser = { path = "/home/mik/Coding/hpi/hpi-sprache/crates/hpi-parser/" }
